--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ios/Vendor/SDWebImage"]
 	path = ios/Vendor/SDWebImage
-	url = https://github.com/SDWebImage/SDWebImageWebPCoder.git
+	url = https://github.com/rs/SDWebImage/WebP.git
